# PHY607-project3

./: .markov.py.swp  GW190412_scalogram.txt  MANIFEST.in  main.py  markov.py  pyproject.toml  readme.md
data/: GW190418_scalogram.txt
mcmc_out/: posterior_samples.npy
src/: main.py  markov.py
src/BayesGrav.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcmc_out/: posterior_samples.npy
